objects/ASI_CRM_Criteria_Answer__c.object
<CustomObject>
    <description>ASI</description>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Base_Currency__c</fullName>
        <label>Base Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Base_Integer__c</fullName>
        <label>Base Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Base_Number__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;ASI_CRM_SG_Currency_Input&quot;,  TEXT(ASI_CRM_SG_Base_Currency__c), 
IF(RecordType.DeveloperName = &quot;ASI_CRM_SG_Integer_Input&quot;, TEXT(ASI_CRM_SG_Base_Integer__c), &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equal (=)</fullName>
                </value>
                <value>
                    <fullName>Not Equal (!=)</fullName>
                </value>
                <value>
                    <fullName>Less Than (&lt;)</fullName>
                </value>
                <value>
                    <fullName>Greater Than (&gt;)</fullName>
                </value>
                <value>
                    <fullName>Less Than or Equal (&lt;=)</fullName>
                </value>
                <value>
                    <fullName>Greater Than or Equal (&gt;=)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Criteria_Threshold__c</fullName>
        <label>Criteria Threshold</label>
        <referenceTo>ASI_CRM_Criteria_Threshold__c</referenceTo>
        <relationshipLabel>Criteria Answers</relationshipLabel>
        <relationshipName>ASI_PROS_Criteria_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Statement__c</fullName>
        <formula>ASI_CRM_SG_Criteria_Threshold__r.ASI_CRM_SG_Question__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Criteria Answer</label>
    <listViews>
        <fullName>ASI_CRM_TW_Criteria_Answers</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Criteria_Threshold__c</columns>
        <columns>ASI_CRM_SG_Statement__c</columns>
        <columns>ASI_CRM_SG_Value__c</columns>
        <columns>ASI_CRM_SG_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Criteria_Answer__c.ASI_CRM_TW_Currency_Input,ASI_CRM_Criteria_Answer__c.ASI_CRM_TW_Integer_Input,ASI_CRM_Criteria_Answer__c.ASI_CRM_TW_Picklist,ASI_CRM_Criteria_Answer__c.ASI_CRM_TW_Text_Input,ASI_CRM_Criteria_Answer__c.ASI_CRM_TW_Boolean</value>
        </filters>
        <label>TW Criteria Answers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Criteria_Threshold__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_SG_Statement__c</columns>
        <columns>ASI_CRM_SG_Weight__c</columns>
        <columns>ASI_CRM_SG_Condition__c</columns>
        <columns>ASI_CRM_SG_Base_Integer__c</columns>
        <columns>ASI_CRM_SG_Base_Currency__c</columns>
        <columns>ASI_CRM_SG_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{0000000000}</displayFormat>
        <label>Criteria Answer No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria Answers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Boolean</fullName>
        <active>true</active>
        <label>Yes/No</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Currency_Input</fullName>
        <active>true</active>
        <label>Currency Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Integer_Input</fullName>
        <active>true</active>
        <label>Integer Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Picklist</fullName>
        <active>true</active>
        <label>Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Text_Input</fullName>
        <active>true</active>
        <label>Text Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Boolean</fullName>
        <active>true</active>
        <label>TH Yes/No</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Currency_Input</fullName>
        <active>true</active>
        <label>TH Currency Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Integer_Input</fullName>
        <active>true</active>
        <label>TH Integer Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Picklist</fullName>
        <active>true</active>
        <label>TH Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Text_Input</fullName>
        <active>true</active>
        <label>TH Text Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Boolean</fullName>
        <active>true</active>
        <label>TW Yes/No</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Currency_Input</fullName>
        <active>true</active>
        <label>TW Currency Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Integer_Input</fullName>
        <active>true</active>
        <label>TW Integer Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Picklist</fullName>
        <active>true</active>
        <label>TW Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Text_Input</fullName>
        <active>true</active>
        <label>TW Text Input</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_TH_ValidateCondition</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;ASI_CRM_TH_Currency_Input&apos; ||  RecordType.DeveloperName = &apos;ASI_CRM_TH_Integer_Input&apos;) &amp;&amp;  ISPICKVAL( ASI_CRM_SG_Condition__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_SG_Condition__c</errorDisplayField>
        <errorMessage>Please select Condition.</errorMessage>
    </validationRules>
</CustomObject>